Fix T41988: Shadow pass inaccurate calculation